Can use Java 21 or higher